# minimily

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md
content/static/assets/css/: main.css
content/templates/: 404.html  base.html  layout.html  profile.html  robots.html  signin.html  signup.html  signup_ok.html  sitemap.html
docs/: book.toml
src/: config.rs  form.rs  handler.rs  lib.rs  main.rs  model.rs  repository.rs  server.rs  template.rs  view.rs
storage/migrations/: 000__user_account.sql
