[package]
name = "minimily"
version = "0.1.0"
authors = ["Hildeberto Mendonca <me@hildeberto.com>"]
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
tera = "1.20.1"

serde = { version = "1.0.228", features = ["derive"] }
sqlx =  { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "rust_decimal"], default-features = false }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
